--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
   <p>Select your move:</p>
 </div>
 <div class="btn">
-  <button id="paper">Paper</button>
-  <button id="rock">Rock</button>
-  <button id="scissors">Scissors</button>
+  <button class="player-move" data-move="paper" id="paper">Paper</button>
+  <button class="player-move" data-move="rock" id="rock">Rock</button>
+  <button class="player-move" data-move="scissors" id="scissors">Scissors</button>
 </div>
 <div id="output" class="comment">
 </div>
