--- a/index.html
+++ b/index.html
@@ -43,7 +43,18 @@
 <div class="btn">
   <button id="ng">New Game</button>
 </div>
-  
+<p>
+  <a href="#modal-one" class="show-modal">Show modal one</a>
+</p>
+<div class="overlay" id="modal-overlay">
+  <div class="modal" id="modal-results">
+    <a href="#" class="close">x</a>
+    <header>Results</header>
+    <div class="content">
+      <p>Dolor sit amet!</p>
+    </div>
+  </div>
+</div>
   
 
     <script  src="js/index.js"></script>
