--- a/index.html
+++ b/index.html
@@ -47,11 +47,20 @@
   <a href="#modal-one" class="show-modal">Show modal one</a>
 </p>
 <div class="overlay" id="modal-overlay">
-  <div class="modal" id="modal-results">
+  <div class="modal" id="modal-results-win">
     <a href="#" class="close">x</a>
     <header>Results</header>
     <div class="content">
-      <p>Dolor sit amet!</p>
+      <p>You won the entire game! Congrats!<br>
+      Now, please press the "New Game" button to play again!</p>
+    </div>
+  </div>
+  <div class="modal" id="modal-results-lose">
+    <a href="#" class="close">x</a>
+    <header>Results</header>
+    <div class="content">
+      <p>You lost the entire game!
+        <br> Now, please press the "New Game" button to play again!</p>
     </div>
   </div>
 </div>
