Add modal with table

--- a/index.html
+++ b/index.html
@@ -48,13 +48,15 @@
     <a href="#" class="close">x</a>
     <header>Results</header>
     <div class="content">
-      <p></p>
+      <p class="winner"></p>
       <table>
         <thead>
           <tr>
+            <th>Round</th>
             <th>Result</th>
             <th>Your move</th>
             <th>Computer move</th>
+            <th>Score</th>
           </tr>
         </thead>
         <tbody class="game-table">
